name:                berp
version:             0.0.1
cabal-version:       >= 1.6
synopsis:            An implementation of Python 3. 
description:         Berp is an implementation of Python 3, written in Haskell.
                     It provides a compiler and an interpreter. In both cases
                     the input Python program is translated into Haskell code.
                     The compiler turns the Haskell code into machine code.
                     The interpreter runs the Haskell code immediately via
                     the GHCi interpreter. The user interface of the interpreter
                     imitates the one provided by CPython.
category:            Language
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2010 Bernard James Pope
author:              Bernard James Pope (Bernie Pope)
maintainer:          florbitous@gmail.com 
homepage:            http://wiki.github.com/bjpop/berp/  
build-type:          Simple
stability:           experimental
tested-with:         GHC==6.10.4 
extra-source-files:  src/include/BerpDebug.h

Executable berp
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
  main-is:
      Main.hs
  hs-source-dirs:
      src, 
      src/Berp/
  build-depends:   
      base == 4.*,
      monads-tf == 0.1.*,
      transformers == 0.2.*,
      containers == 0.2.*,
      language-python == 0.3.*,
      haskell-src-exts == 1.9.*,
      parseargs == 0.1.*,
      process == 1.0.*,
      filepath == 1.1.*,
      directory == 1.0.*,
      ghc >= 6.10.4,
      haskeline == 0.6.*,
      ghc-paths == 0.1.*,
      extensible-exceptions == 0.1.*
  other-modules:
      Berp.Compile.Compile
      Berp.Compile.IdentString
      Berp.Compile.Monad
      Berp.Compile.HsSyntaxUtils
      Berp.Compile.PySyntaxUtils
      Berp.Compile.PrimName
      Berp.Compile.Utils
      Berp.Compile.VarSet
      Berp.Interpreter.Input
      Berp.Interpreter.Monad
      Berp.Interpreter.Repl

Library
   ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
   include-dirs:
       src/include 
   hs-source-dirs:
       src
   build-depends:
       base,
       monads-tf,
       transformers,
       containers,
       ghc-prim,
       integer,
       template-haskell,
       array
   exposed-modules:
      Berp.Base
      Berp.Base.Hash
      Berp.Base.Mangle
      Berp.Version
   other-modules:
      Berp.Base.Attributes
      Berp.Base.Builtins
      Berp.Base.Builtins.Constants
      Berp.Base.Builtins.Exceptions
      Berp.Base.Builtins.Functions
      Berp.Base.Builtins.Utils
      Berp.Base.Class
      Berp.Base.ControlStack
      Berp.Base.Exception
      Berp.Base.ExitCodes
      Berp.Base.HashTable
      Berp.Base.Ident 
      Berp.Base.Identity
      Berp.Base.LiftedIO
      Berp.Base.Monad
      Berp.Base.Object
      Berp.Base.Operators
      Berp.Base.Prims
      Berp.Base.SemanticTypes
      Berp.Base.StdNames
      Berp.Base.StdTypes.Bool
      Berp.Base.StdTypes.Dictionary
      Berp.Base.StdTypes.Function
      Berp.Base.StdTypes.Generator
      Berp.Base.StdTypes.Integer
      Berp.Base.StdTypes.List
      Berp.Base.StdTypes.None
      Berp.Base.StdTypes.Object
      Berp.Base.StdTypes.ObjectBase
      Berp.Base.StdTypes.String
      Berp.Base.StdTypes.Tuple
      Berp.Base.StdTypes.Type
      Berp.Base.Truth
      Berp.Base.Unique
